Fixed some alignment issues on Navbar

--- a/src/Components/Navbar/style.scss
+++ b/src/Components/Navbar/style.scss
@@ -8,13 +8,15 @@
     position: fixed;
     top:0;
     background-color: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(10px);
-    height: 80px;
+    backdrop-filter: blur(5px);
+    height: 11%;
+    z-index: 100;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     // border-bottom: 2px solid white;
 
 }
 #Navbar #logo
-{
+{   cursor: pointer;
     width: 10%;
     div
     {
@@ -30,12 +32,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 8%;
     button
     {
         padding: 5px 10px;
+        box-sizing: border-box;
         background-color: transparent;
-        font-size: 20px;
+        font-size: 1.5vw;
         border: none;
         cursor: pointer;
         transition: 0.3s;
@@ -52,6 +55,7 @@
 #Navbar>div:nth-child(3)
 {
     width: 25%;
+    height: 100%;
     display: flex;
     justify-content:end;
     align-items: center;
@@ -73,10 +77,11 @@
 }
 #Navbar>div:nth-child(3) > div > div:nth-child(1)
 {
-    height: 50px;
-    width: 50px;
+    height: 60px;
+    width: 60px;
     object-fit: contain;
     background-size: contain;
+    background-repeat: no-repeat;
     border-radius: 50%;
     cursor: pointer;
 }
